k8s/dev/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: dev
  labels:
    app: service1
    env: dev
spec:
  type: ClusterIP
  selector:
    app: service1
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service2
  namespace: dev
  labels:
    app: service2
    env: dev
spec:
  type: ClusterIP
  selector:
    app: service2
  ports:
    - name: http
      protocol: TCP
      port: 5001
      targetPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: service3
  namespace: dev
  labels:
    app: service3
    env: dev
spec:
  type: ClusterIP
  selector:
    app: service3
  ports:
    - name: http
      protocol: TCP
      port: 5002
      targetPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: dev
  labels:
    app: frontend
    env: dev
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
